# serializer version: 1
# name: test_findings_json_is_locked_by_snapshot[bat_star-bat-star-cut.svg]
  dict({
    'content_hash': '0f7a670a7aeb86ed02766a0f4b387d7fd5663043ab1c12b4d015aaa64be00186',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'tiny_isolated_shape',
        'location': dict({
          'max_x': 270.0,
          'max_y': 27.0,
          'min_x': 250.0,
          'min_y': 19.8524,
        }),
        'measured_value': 0.015,
        'message': 'tiny isolated shape: path element 0, subpath 1 has area 0.015in², below the 0.02in² minimum shape area',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.02,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'bat-star-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[coralline_algae-coralline-algae-cut.svg]
  dict({
    'content_hash': 'c9e729d1088e93b96c4537130286c6d85e44898daf3e929e559f90cd23791acf',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'excessive_complexity',
        'location': dict({
          'max_x': 280.1764,
          'max_y': 280.5131,
          'min_x': 20.8288,
          'min_y': 20.8236,
        }),
        'measured_value': 13.4014,
        'message': 'excessive geometric complexity: path element 0, subpath 0 has 13.4014 nodes/in, above the 11.0 nodes/in threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 11.0,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'coralline-algae-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[giant_green_anemone-giant-green-anemone-cut.svg]
  dict({
    'content_hash': 'af8bd7fd1ffdf4385a7d4d87a3422574763606c897dc71bc109d29f6461f9ce3',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
    ]),
    'reference_size_in': 3.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'giant-green-anemone-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[gumboot_chiton-gumboot-chiton-cut.svg]
  dict({
    'content_hash': '526771f6aafe457dae0a8f5775938aefdfb540aedff07f4c6cec496a257cee48',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'accidental_dot',
        'location': dict({
          'max_x': 287.1629,
          'max_y': 27.1499,
          'min_x': 273.8683,
          'min_y': 13.9002,
        }),
        'measured_value': 0.1496,
        'message': 'accidental dot: path element 0, subpath 1 is only 0.1496in across, below the 0.2in dot threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.2,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'gumboot-chiton-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[keyhole_limpet-keyhole-limpet-cut.svg]
  dict({
    'content_hash': '8e507d53b4799d2e88e5e4fad7971d2a5c2072c8da88a0aa59073bac14734ae4',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'small_hole',
        'location': dict({
          'max_x': 156.0,
          'max_y': 156.0,
          'min_x': 145.0,
          'min_y': 145.0,
        }),
        'measured_value': 0.0137,
        'message': 'very small hole: path element 0, subpath 1 has area 0.0137in², below the 0.02in² minimum hole area',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.02,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'keyhole-limpet-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[nudibranch-nudibranch-cut.svg]
  dict({
    'content_hash': '19b302fcd300549d6ec0a6046cb855bb107e4cefe52189c0979b0daf1140bdc1',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 174.9315,
          'max_y': 153.7995,
          'min_x': 126.1223,
          'min_y': 147.0494,
        }),
        'measured_value': 0.0875,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0875in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'nudibranch-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[ochre_sea_star-ochre-sea-star-cut.svg]
  dict({
    'content_hash': '16a93af69a468015b6f2b933272e91fb825373e59c3e104fbfe42dfd62097063',
    'excessive_complexity_reference_size_in': 6.0,
    'findings': list([
    ]),
    'reference_size_in': 3.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'ochre-sea-star-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[owl_limpet-owl-limpet-cut.svg]
  dict({
    'content_hash': '924c2319b1c4eb0b36fe3476d1e9ea4aa3e595f267840c41251cd06762e47973',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'disconnected_fragments',
        'location': dict({
          'max_x': 93.2,
          'max_y': 57.353,
          'min_x': 75.8667,
          'min_y': 39.678,
        }),
        'measured_value': None,
        'message': "disconnected fragment: path element 0, subpath 1 is separate from the design's largest piece",
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': None,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'owl-limpet-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[purple_sea_urchin-purple-sea-urchin-cut.svg]
  dict({
    'content_hash': 'edcb8c90ddc172cda4d7748a7719d67b29a79689866c45f0c73eb756d106873c',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
    ]),
    'reference_size_in': 3.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'purple-sea-urchin-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[turban_snail-turban-snail-cut.svg]
  dict({
    'content_hash': 'e79374b5b9e4f445ead1200619ac8f3f2754d246373843271840973980bd10a9',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
    ]),
    'reference_size_in': 3.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'turban-snail-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[bat_star-bat-star-cut.svg]
  dict({
    'content_hash': '0f7a670a7aeb86ed02766a0f4b387d7fd5663043ab1c12b4d015aaa64be00186',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'accidental_dot',
        'location': dict({
          'max_x': 270.0,
          'max_y': 27.0,
          'min_x': 250.0,
          'min_y': 19.8524,
        }),
        'measured_value': 0.0768,
        'message': 'accidental dot: path element 0, subpath 1 is only 0.0768in across, below the 0.2in dot threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.2,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'bat-star-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[coralline_algae-coralline-algae-cut.svg]
  dict({
    'content_hash': 'c9e729d1088e93b96c4537130286c6d85e44898daf3e929e559f90cd23791acf',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'excessive_complexity',
        'location': dict({
          'max_x': 280.1764,
          'max_y': 280.5131,
          'min_x': 20.8288,
          'min_y': 20.8236,
        }),
        'measured_value': 13.4014,
        'message': 'excessive geometric complexity: path element 0, subpath 0 has 13.4014 nodes/in, above the 11.0 nodes/in threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 11.0,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'coralline-algae-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[giant_green_anemone-giant-green-anemone-cut.svg]
  dict({
    'content_hash': 'af8bd7fd1ffdf4385a7d4d87a3422574763606c897dc71bc109d29f6461f9ce3',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
    ]),
    'reference_size_in': 1.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'giant-green-anemone-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[gumboot_chiton-gumboot-chiton-cut.svg]
  dict({
    'content_hash': '526771f6aafe457dae0a8f5775938aefdfb540aedff07f4c6cec496a257cee48',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'accidental_dot',
        'location': dict({
          'max_x': 287.1629,
          'max_y': 27.1499,
          'min_x': 273.8683,
          'min_y': 13.9002,
        }),
        'measured_value': 0.0499,
        'message': 'accidental dot: path element 0, subpath 1 is only 0.0499in across, below the 0.2in dot threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.2,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'gumboot-chiton-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[keyhole_limpet-keyhole-limpet-cut.svg]
  dict({
    'content_hash': '8e507d53b4799d2e88e5e4fad7971d2a5c2072c8da88a0aa59073bac14734ae4',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'small_hole',
        'location': dict({
          'max_x': 156.0,
          'max_y': 156.0,
          'min_x': 145.0,
          'min_y': 145.0,
        }),
        'measured_value': 0.0015,
        'message': 'very small hole: path element 0, subpath 1 has area 0.0015in², below the 0.02in² minimum hole area',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.02,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'keyhole-limpet-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[nudibranch-nudibranch-cut.svg]
  dict({
    'content_hash': '19b302fcd300549d6ec0a6046cb855bb107e4cefe52189c0979b0daf1140bdc1',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 175.4507,
          'max_y': 153.7995,
          'min_x': 125.6031,
          'min_y': 147.5686,
        }),
        'measured_value': 0.025,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.025in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'nudibranch-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[ochre_sea_star-ochre-sea-star-cut.svg]
  dict({
    'content_hash': '16a93af69a468015b6f2b933272e91fb825373e59c3e104fbfe42dfd62097063',
    'excessive_complexity_reference_size_in': 6.0,
    'findings': list([
    ]),
    'reference_size_in': 1.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'ochre-sea-star-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[owl_limpet-owl-limpet-cut.svg]
  dict({
    'content_hash': '924c2319b1c4eb0b36fe3476d1e9ea4aa3e595f267840c41251cd06762e47973',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'accidental_dot',
        'location': dict({
          'max_x': 93.2,
          'max_y': 57.353,
          'min_x': 75.8667,
          'min_y': 39.678,
        }),
        'measured_value': 0.1933,
        'message': 'accidental dot: path element 0, subpath 1 is only 0.1933in across, below the 0.2in dot threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.2,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'owl-limpet-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[purple_sea_urchin-purple-sea-urchin-cut.svg]
  dict({
    'content_hash': 'edcb8c90ddc172cda4d7748a7719d67b29a79689866c45f0c73eb756d106873c',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 127.3594,
          'max_y': 86.2862,
          'min_x': 102.6396,
          'min_y': 40.1426,
        }),
        'measured_value': 0.0673,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0673in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 242.7186,
          'max_y': 104.4141,
          'min_x': 204.8148,
          'min_y': 58.2704,
        }),
        'measured_value': 0.0625,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 97.6957,
          'max_y': 102.7661,
          'min_x': 63.0879,
          'min_y': 63.2144,
        }),
        'measured_value': 0.0625,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 72.9758,
          'max_y': 132.4299,
          'min_x': 30.1282,
          'min_y': 94.5262,
        }),
        'measured_value': 0.0673,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0673in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 274.0303,
          'max_y': 134.0779,
          'min_x': 226.2387,
          'min_y': 96.1742,
        }),
        'measured_value': 0.0637,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0637in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 278.9743,
          'max_y': 165.3896,
          'min_x': 236.1266,
          'min_y': 148.9098,
        }),
        'measured_value': 0.0625,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 71.3279,
          'max_y': 209.8853,
          'min_x': 26.8322,
          'min_y': 181.8695,
        }),
        'measured_value': 0.0637,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0637in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 270.7343,
          'max_y': 208.2373,
          'min_x': 229.5347,
          'min_y': 181.8695,
        }),
        'measured_value': 0.0625,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 94.3997,
          'max_y': 242.845,
          'min_x': 54.848,
          'min_y': 206.5893,
        }),
        'measured_value': 0.0625,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 204.8148,
          'max_y': 267.5649,
          'min_x': 171.8551,
          'min_y': 223.0692,
        }),
        'measured_value': 0.0707,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0707in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 127.3594,
          'max_y': 264.2689,
          'min_x': 99.3436,
          'min_y': 224.7172,
        }),
        'measured_value': 0.0625,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 158.6712,
          'max_y': 275.8048,
          'min_x': 140.5433,
          'min_y': 226.3652,
        }),
        'measured_value': 0.0637,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0637in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'purple-sea-urchin-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[turban_snail-turban-snail-cut.svg]
  dict({
    'content_hash': 'e79374b5b9e4f445ead1200619ac8f3f2754d246373843271840973980bd10a9',
    'excessive_complexity_reference_size_in': 3.0,
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'small_hole',
        'location': dict({
          'max_x': 162.9661,
          'max_y': 162.9915,
          'min_x': 137.9021,
          'min_y': 137.9052,
        }),
        'measured_value': 0.0074,
        'message': 'very small hole: path element 0, subpath 1 has area 0.0074in², below the 0.02in² minimum hole area',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.02,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'turban-snail-cut.svg',
  })
# ---
# name: test_validate_product_scoped_output_is_locked_by_snapshot
  "excessive_complexity is measured at each cut file's own cleanup size purple_sea_urchin cut_svg purple-sea-urchin-cut.svg needs review (at 1in, product kelp_forest_mini_pack) narrow_feature (102.6396,40.1426)-(127.3594,86.2862) narrow feature: path element 0, subpath 0 narrows to 0.0673in wide, below the 0.1in minimum feature width narrow_feature (204.8148,58.2704)-(242.7186,104.4141) narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width narrow_feature (63.0879,63.2144)-(97.6957,102.7661) narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width narrow_feature (30.1282,94.5262)-(72.9758,132.4299) narrow feature: path element 0, subpath 0 narrows to 0.0673in wide, below the 0.1in minimum feature width narrow_feature (226.2387,96.1742)-(274.0303,134.0779) narrow feature: path element 0, subpath 0 narrows to 0.0637in wide, below the 0.1in minimum feature width narrow_feature (236.1266,148.9098)-(278.9743,165.3896) narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width narrow_feature (26.8322,181.8695)-(71.3279,209.8853) narrow feature: path element 0, subpath 0 narrows to 0.0637in wide, below the 0.1in minimum feature width narrow_feature (229.5347,181.8695)-(270.7343,208.2373) narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width narrow_feature (54.848,206.5893)-(94.3997,242.845) narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width narrow_feature (171.8551,223.0692)-(204.8148,267.5649) narrow feature: path element 0, subpath 0 narrows to 0.0707in wide, below the 0.1in minimum feature width narrow_feature (99.3436,224.7172)-(127.3594,264.2689) narrow feature: path element 0, subpath 0 narrows to 0.0625in wide, below the 0.1in minimum feature width narrow_feature (140.5433,226.3652)-(158.6712,275.8048) narrow feature: path element 0, subpath 0 narrows to 0.0637in wide, below the 0.1in minimum feature width"
# ---
